--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Pesonal Portfolio HTML Template</title>
+    <title>KR11 Landing Page Html</title>
 
     <meta name="author" content="themesflat.com">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="assets/fonts/font-awesome.css">
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="assets/icon/Favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/icon/Favicon.png">
+    <link rel="shortcut icon" href="assets/images/logo/Favicon.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/images/logo/Favicon.png">
 
 </head>
 
